added login and registration API

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb+srv://fahadHussain:LockheedSR71@recipes.a0xuvug.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://fahadHussain:LockheedSR71@recipes.a0xuvug.mongodb.net/recipes?retryWrites=true&w=majority"
