--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 HTTPS=true
-SSL_CRT_FILE=C:\Users\fahad.hussain/cert.pem
-SSL_KEY_FILE=C:\Users\fahad.hussain/key.pem
+SSL_CRT_FILE=cert.pem
+SSL_KEY_FILE=key.pem
