--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="mongodb+srv://fahadHussain:LockheedSR71@recipes.a0xuvug.mongodb.net/recipes?retryWrites=true&w=majority"
-SSL_CRT_FILE=C:\Users\fahad.hussain/cert.pem
-SSL_KEY_FILE=C:\Users\fahad.hussain/key.pem
+SSL_CRT_FILE=cert.pem
+SSL_KEY_FILE=key.pem
