--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
-    "build": "npm i"
+    "build": "netlify deploy --prod"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
